--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7537,7 +7537,7 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
     right: 0;
     bottom: 0;
-    background: #979874ff;
+    background: #237088ff;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
     -webkit-transform-origin: 0 50%;
@@ -7568,7 +7568,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #fh5co-header > .navbar li.active a > span .border-active {
-    background: #979874ff;
+    background: #237088ff;
 }
 
 #fh5co-header .navbar-brand {
@@ -8866,11 +8866,12 @@ i.red{
 }
 
 .slider-container{
-    padding-right: 40px;
-    padding-top: 24px;
+    padding-right: 70px;
+    padding-left: 70px;
+    padding-top: 40px;
     text-align: center;
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     background: #237088ff;
     border-radius: 50%;
 }
@@ -8908,7 +8909,7 @@ i.red{
     color: #fff;
     flex-wrap: wrap;
     text-align: right;
-    font-size: 2.3rem;
+    font-size: 2.6rem;
     display: flex;
     justify-content: flex-end;
 }
