--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -304,7 +304,9 @@ h1, h2, h3, h4, h5, h6 {
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	line-height: 22px;
+	text-decoration: underline solid #237088ff 50%;
 }
+
 .fh5co-section-sub-lead {
 	font-size: 22px;
 	font-family: $font-roboto;
