--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7689,19 +7689,25 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .fh5co-section-convidados {
-    font-family: "Arial Black", serif;
+    font-family: "jost-bold", serif;
     text-align: left;
     font-size: 28px;
     font-weight: bolder;
     color: #237088ff;
     letter-spacing: 2px;
     margin-top: 150px;
+    margin-left: 30px;
     /* text-decoration: underline solid #237088ff 10%; */
+}
+
+.fh5co-section-convidados+h4, .fh5co-section-convidados+h4+p{
+        margin-left: 30px;
 }
 
 .img-top-convidados{
     position: relative;
-    top: 100px
+    top: 100px;
+    width: 100%;
 }
 
 .fh5co-section-convidados-cm {
@@ -7758,7 +7764,7 @@ hr.underline-title{
     font-family: "Roboto", arial, sans-serif;
     font-weight: 100;
     line-height: 32px;
-    
+
 }
 
 .fh5co-section-sub-lead:first-child{
@@ -7791,18 +7797,20 @@ hr.underline-title{
 }
 
 .convidado{
-    display: flex;
+    display: inline-block;
     flex-wrap: wrap;
     justify-content: center;
     padding: unset;
 }
-
+section#convidados{
+    height: 130vh;
+}
 .convidado div img{
-    width: 7em;
+    width: 65px;
+    height: 65px;
     border-radius: 50%;
     -webkit-box-shadow: 6px 3px 0px 3px #979874ff;
     box-shadow: 6px 3px 0px 3px #979874ff;
-    
 }
 
 .convidado div h5{
@@ -8384,6 +8392,29 @@ pre {
     .col-xxs-12 {
         float: none;
         width: 100%;
+    }
+
+    .img-top-convidados{
+        position: relative;
+        top: 50px;
+        width: 100%;
+        height: 70px;
+    }
+
+    .doctor-img-individual{
+        width: 130px;
+        margin-top: 60px;
+    }
+    .doctor-img-individual+img{
+        display: none;
+    }
+    .cvs-sm{
+        display: flex;
+        align-content: center;
+    }
+
+    .h5co-section-convidados{
+        margin-top: unset!important;
     }
 }
 
@@ -9028,7 +9059,7 @@ i.red{
 /************************************/
 
 .logo-title{
-    font-family: "Arial Black", serif;
+    font-family: "jost-bold", serif;
     font-weight: bolder;
     color: #237088ff;
     font-size: 5rem;
@@ -9037,8 +9068,9 @@ i.red{
 }
 
 .logo-sub-title{
-    font-family: "Arial", serif;
+    font-family: "jost-bold", serif;
     /*font-weight: bold;*/
+    margin-top: -20px;
     color: #237088ff;
     flex-wrap: wrap;
     text-align: right;
@@ -9048,7 +9080,7 @@ i.red{
 }
 
 .logo-bold-text{
-    font-family: "Arial Black", serif;
+    font-family: "jost-bold", serif;
     color: #237088ff;
     flex-wrap: wrap;
     text-align: right;
@@ -9058,7 +9090,7 @@ i.red{
 }
 
 .logo-normal-text{
-    font-family: "Arial", serif;
+    font-family: "jost-medium", serif;
     color: #237088ff;
     flex-wrap: wrap;
     text-align: right;
@@ -9081,7 +9113,7 @@ i.red{
         background: rgba(0,0,0,.02);
     }
   }
-  
+
 
 .side-banner{
     position: absolute;
@@ -9096,7 +9128,7 @@ i.red{
     position: absolute;
     float: left;
     left: 0;
-    top: 38vh;
+    /*top: 38vh;*/
     width: 100px;
     height: 570px;
 }
@@ -9119,7 +9151,7 @@ i.red{
     }
 
     .fh5co-section-sub-lead:first-child {
-        margin-top: unset; 
+        margin-top: unset;
     }
 
     hr.underline-title{
