--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,26 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'jost-semi-bold';
+    src: url("../fonts/jost/Jost-SemiBold.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'jost-light';
+    src: url("../fonts/jost/Jost-Light.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'jost-light-italic';
+    src: url("../fonts/jost/Jost-LightItalic.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
 /*!
  * Bootstrap v3.3.5 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
@@ -1252,7 +1272,7 @@ td, th {
     content: "\e232";
 }
 
-.glyphicon-education:before {
+.glyphicon-:before {
     content: "\e233";
 }
 
@@ -1448,6 +1468,7 @@ img {
 }
 
 .logo {
+    width: 170px;
     margin-top: -20px;
 }
 
@@ -1930,7 +1951,8 @@ pre code {
         width: 1180px;
     }
     .logo{
-        width: 200px;
+        margin-left: 0px;
+        width: 170px;
     }
 }
 
@@ -3692,11 +3714,16 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 .btn-inscricoes {
-    padding: 7px !important;
+    font-family: "jost-semi-bold", Serif!important;
+    letter-spacing: .5px!important;
+    font-size: .85em!important;
+    padding: 8px 8px 8px 8px !important;
     font-weight: bolder !important;
     color: #ffffff !important;
     margin-top: 10px !important;
     margin-left: 30px !important;
+    -webkit-box-shadow: 5px 5px 15px 5px #7E7E7E;
+    box-shadow: 5px 5px 15px 5px #7E7E7E;
 }
 
 .btn-inscricoes:hover {
@@ -4817,6 +4844,7 @@ tbody.collapse.in {
 
 .navbar-brand > img {
     display: block;
+    margin-top: -3px;
 }
 
 @media (min-width: 1180px) {
@@ -7515,11 +7543,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #fh5co-header > .navbar li a {
-    text-transform: uppercase;
-    color: #000;
-    font-size: 1.1rem;
+    /*text-transform: uppercase;*/
+    color: darkgrey;
+    font-size: 1.4rem;
     font-weight: normal;
-    font-family: "Montserrat", arial, sans-serif;
+    font-family: "jost-medium", arial, sans-serif;
 }
 
 #fh5co-header > .navbar li a > span .border {
@@ -9065,8 +9093,6 @@ i.red{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0;
-    margin: 0;
     width: 100%;
     height: 95vh;
     background-image: url("../images/bg.jpg");
@@ -9076,12 +9102,11 @@ i.red{
 }
 
 .slider-container{
-    padding-right: 70px;
-    padding-left: 70px;
-    padding-top: 40px;
-    text-align: center;
-    width: 350px;
-    height: 350px;
+    padding-right: 100px;
+    /*padding-left: 70px;*/
+    padding-top: 50px;
+    width: 400px;
+    height: 400px;
     background: #237088ff;
     border-radius: 50%;
 }
@@ -9105,51 +9130,62 @@ i.red{
 
 .slider-container
 .logo-title{
-    font-family: "jost-bold", serif;
+    font-family: "jost-semi-bold", serif;
     font-weight: bolder;
     color: #fff;
-    font-size: 4rem;
+    font-size: 5.5rem;
     display: flex;
     justify-content: flex-end;
 }
+
 .slider-container
 .logo-sub-title{
-    font-family: "jost-bold", serif;
+    font-family: "jost-light", serif;
     /*font-weight: bold;*/
     color: #fff;
     flex-wrap: wrap;
     text-align: right;
-    font-size: 2.6rem;
+    font-size: 3.6rem;
     display: flex;
     justify-content: flex-end;
 }
+
 .slider-container
 .logo-bold-text{
-    font-family: "jost-regular", serif;
+    font-family: "jost-medium", serif;
     color: #fff;
     flex-wrap: wrap;
     text-align: right;
-    font-size: 1rem;
+    font-size: 1.44rem;
     display: flex;
     justify-content: flex-end;
 }
 .slider-container
 .logo-normal-text{
-    font-family: "jost-regular", serif;
+    font-family: "jost-light-italic", serif;
     color: #fff;
-    flex-wrap: wrap;
+    /*flex-wrap: wrap;*/
     text-align: right;
-    font-size: 1rem;
+    font-size: 1.35rem;
     display: flex;
     justify-content: flex-end;
 }
 
 .slider-container a{
-    font-family: "jost-bold", serif;
-    font-size: 1.3rem;
+    font-family: "jost-regular", serif;
+    font-size: 1rem;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    justify-content: start;
+    letter-spacing: 1px;
+    width: 90%;
     margin: 140px 0 0 0;
+    -webkit-box-shadow: 5px 5px 15px 5px #7E7E7E;
+    box-shadow: 5px 5px 15px 5px #7E7E7E;
+}
+
+.slider-container a i{
+    margin-left: 30px;
 }
 /************************************/
 
@@ -9163,7 +9199,7 @@ i.red{
 }
 
 .logo-sub-title{
-    font-family: "jost-bold", serif;
+    font-family: "jost-regular", serif;
     /*font-weight: bold;*/
     margin-top: -20px;
     color: #237088ff;
