--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8926,7 +8926,117 @@ img.fh5co-align-right {
     }
 
     .logo {
-        width: 150px
+        width: 100px!important;
+        margin-top: -10px!important;
+    }
+
+    .slider-container{
+        margin-top: 90px!important;
+    }
+
+    .slider-container{
+        margin: 150px auto!important;
+        padding-right: 50px!important;
+        /*padding-left: 70px;*/
+        padding-top: 0px!important;
+        width: 300px!important;
+        height: 300px!important;
+        background: #237088ff!important;
+        border-radius: 50%!important;
+    }
+
+    .slider-sppsm-logo {
+        position: relative;
+        top: -20px;
+        left: -10px;
+        width: 100px!important;
+        height: 100px!important;
+        background: #fff;
+        border-radius: 50%;
+    }
+
+    .slider-sppsm-logo img{
+        width: 75px!important;
+    }
+
+
+    .lettering-logo-container{
+        margin-top: -65px!important;
+        padding-left: 30px!important;
+        padding-right: 25px!important;
+        /*margin-right: 20px;*/
+    }
+
+
+    .slider-container
+    .logo-title{
+        font-family: "jost-semi-bold", serif;
+        font-weight: bolder;
+        color: #fff;
+        font-size: 4rem!important;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .slider-container
+    .logo-sub-title{
+        font-family: "jost-light", serif;
+        /*font-weight: bold;*/
+        color: #fff;
+        flex-wrap: wrap;
+        text-align: right;
+        font-size: 2.6rem!important;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .slider-container
+    .logo-bold-text{
+        font-family: "jost-medium", serif;
+        color: #fff;
+        flex-wrap: wrap;
+        text-align: right;
+        font-size: 1.1rem!important;
+        display: flex;
+        justify-content: flex-end;
+    }
+    .slider-container
+    .logo-normal-text{
+        font-family: "jost-light-italic", serif;
+        color: #fff;
+        /*flex-wrap: wrap;*/
+        text-align: right;
+        font-size: 1rem!important;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+
+    .slider-container-button{
+        margin: -100px auto;
+    }
+
+    .slider-container-button a{
+        font-family: "jost-regular", serif;
+        font-size: 1rem;
+        text-align: left;
+        letter-spacing: 1px;
+        width: 75%!important;
+        -webkit-box-shadow: 5px 5px 15px 5px #7E7E7E;
+        box-shadow: 5px 5px 15px 5px #7E7E7E;
+    }
+
+    .slider-container-button a i{
+        margin-left: 20px;
+        font-size: 20px;
+    }
+
+    .bv-aligment{
+        margin-top: -90px!important;
+    }
+
+    .mb-bv-aligment{
+        margin-top: 40px!important;
     }
 
     .mobile-header {
@@ -9202,6 +9312,7 @@ i.red{
     border-radius: 50%;
 }
 
+
 .slider-container-button{
     margin: -100px auto;
 }
@@ -9222,9 +9333,9 @@ i.red{
 }
 
 .lettering-logo-container{
-    margin-top: -100px!important;
+    margin-top: -100px;
     padding-left: 30px!important;
-    padding-right: 45px!important;
+    padding-right: 45px;
     margin-right: 20px;
 }
 
@@ -9385,8 +9496,8 @@ i.red{
         padding: 0;
         margin: 0;
         width: 100%;
-        height: 50vh;
-        background-image: url("../images/local-sm.jpg");
+        height: 70vh!important;
+        background-image: url("../images/local-sm.jpg")!important;
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
