--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8959,7 +8959,7 @@ img.fh5co-align-right {
         display: none!important;
     }
     .fh5co-parallax{
-        height: 80vh!important;
+        height: 95vh!important;
     }
 
     .side-banner-comissoes, .side-banner-convidados{
@@ -9210,7 +9210,7 @@ img.fh5co-align-right {
         font-size: 1rem;
         text-align: left;
         letter-spacing: 1px;
-        width: 75%!important;
+        width: 250px!important;
         -webkit-box-shadow: 5px 5px 15px 5px #7E7E7E;
         box-shadow: 5px 5px 15px 5px #7E7E7E;
     }
@@ -9495,8 +9495,8 @@ i.red{
     padding-right: 50px;
     /*padding-left: 70px;*/
     padding-top: 0px;
-    width: 400px;
-    height: 400px;
+    width: 460px;
+    height: 460px;
     background: #237088ff;
     border-radius: 50%;
 }
@@ -9511,7 +9511,7 @@ i.red{
     font-size: 1rem;
     text-align: left;
     letter-spacing: 1px;
-    width: 25%;
+    width: 250px;
     -webkit-box-shadow: 5px 5px 15px 5px #7E7E7E;
     box-shadow: 5px 5px 15px 5px #7E7E7E;
 }
@@ -9522,9 +9522,9 @@ i.red{
 }
 
 .lettering-logo-container{
-    margin-top: -100px;
+    margin-top: -90px;
     padding-left: 30px!important;
-    padding-right: 45px;
+    padding-right: 55px;
     margin-right: 20px;
 }
 
@@ -9550,7 +9550,7 @@ i.red{
     font-family: "jost-semi-bold", serif;
     font-weight: bolder;
     color: #fff;
-    font-size: 5.5rem;
+    font-size: 6.5rem;
     display: flex;
     justify-content: flex-end;
 }
@@ -9562,7 +9562,7 @@ i.red{
     color: #fff;
     flex-wrap: wrap;
     text-align: right;
-    font-size: 3.6rem;
+    font-size: 4.6rem;
     display: flex;
     justify-content: flex-end;
 }
@@ -9573,17 +9573,18 @@ i.red{
     color: #fff;
     flex-wrap: wrap;
     text-align: right;
-    font-size: 1.44rem;
+    font-size: 1.8rem;
     display: flex;
     justify-content: flex-end;
 }
+
 .slider-container
 .logo-normal-text{
     font-family: "jost-light-italic", serif;
     color: #fff;
     /*flex-wrap: wrap;*/
     text-align: right;
-    font-size: 1.35rem;
+    font-size: 1.65rem;
     display: flex;
     justify-content: flex-end;
 }
